# Delivery/http/router.go
@@ -7,6 +7,7 @@ import (
 	"a2sv.org/hub/Delivery/http/middleware"
 	_ "a2sv.org/hub/docs" // 👈 Important: docs generated by swag init
 	"a2sv.org/hub/usecases"
+	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
@@ -36,9 +37,14 @@ func SetupRouter(
 
 ) *gin.Engine {
 	// Create a new gin router with default middleware
+	// @securityDefinitions.apikey BearerAuth
+	// @in header
+	// @name Authorization
+	// @description Type "Bearer" followed by a space and JWT token.
 	router := gin.Default()
+	router.Use(cors.Default())
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-	router.Use(middleware.UpstashRateLimiter(30, 60, os.Getenv("REDIS_URL"), os.Getenv("REDIS_TOKEN")))
+	router.Use(middleware.UpstashRateLimiter(10, 60, os.Getenv("REDIS_URL"), os.Getenv("REDIS_TOKEN")))
 
 	userHandler := handlers.NewUserHandler(userUseCase)
 	roleHandler := handlers.NewRoleHandler(roleUseCase)
@@ -47,7 +53,7 @@ func SetupRouter(
 	registrationHandler := handlers.NewRegistrationHandler(bulkRegistrationUseCase)
 	superGroupHandler := handlers.NewSuperGroupHandler(superGroupUseCase)
 
-	RoleMiddleware := middleware.NewRoleMiddleware(&userUseCase,&roleUseCase)
+	RoleMiddleware := middleware.NewRoleMiddleware(&userUseCase, &roleUseCase)
 
 	// API routes group
 	api := router.Group("/api")
@@ -56,17 +62,17 @@ func SetupRouter(
 		authGroup := api.Group("/auth")
 		{
 			authGroup.POST("/login", userHandler.Login)
-			
+
 			authGroup.GET("/google", handlers.InitGoogleOAuth)
-			
+
 			authGroup.GET("/google/callback", handlers.HandleGoogleCallback)
 		}
 		// User routes
 		users := api.Group("/users")
 		{
-			users.POST("",RoleMiddleware.RoleMiddleware("Head of Academy"), userHandler.CreateUser)
-			users.PUT("/:id",RoleMiddleware.RoleMiddleware("Head of Academy"), userHandler.UpdateUser)
-			users.DELETE("/:id",RoleMiddleware.RoleMiddleware("Head of Academy"), userHandler.DeleteUser)
+			users.POST("", RoleMiddleware.RoleMiddleware("Head of Academy"), userHandler.CreateUser)
+			users.PATCH("/:id", RoleMiddleware.RoleMiddleware("Head of Academy"), userHandler.UpdateUser)
+			users.DELETE("/:id", RoleMiddleware.RoleMiddleware("Head of Academy"), userHandler.DeleteUser)
 
 			users.GET("", userHandler.ListUsers)
 			users.GET("/:id", userHandler.GetUserByID)
