# Domain/entity/cache.go
@@ -1,14 +1,0 @@
-package entity
-
-import "time"
-
-type UserCache struct {
-	ID        uint      `json:"id"`
-	Name      string    `json:"name"`
-	Email     string    `json:"email"`
-	Password  string    `json:"password"`
-	RoleID    uint      `json:"role_id"`
-	Inactive  bool      `json:"inactive"`
-	CreatedAt time.Time `json:"created_at"`
-	UpdatedAt time.Time `json:"updated_at"`
-}
